test/src/e2e_vm_tests/test_programs/should_fail/self_impl_contract/src/main.sw
contract;

abi MyContract {
    fn foo();
}

impl Contract { // self impl for a `Contract`?
    fn foo() {
    }
}
